--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               </nav>
             <section id="about" class="container-fluid">
                 <div class="col-8 col-lg-4 profile-picture">
-                    <img src="images/moi-ConvertImage.png"  class="rounded-circle" alt="">
+                    <img src="images/318752620_706444177464861_2023846324301253708_n.jpg"  class="rounded-circle" alt="">
                 </div>
                 <div class="heading">
                     <h1>Salut, c'est moi Seba</h1>
